--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,22 +31,31 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+
+  #icons
   cupertino_icons: ^1.0.2
-  bloc: ^7.2.0
-  flutter_bloc: ^7.3.0
-  firebase_core: ^1.6.0
-  firebase_auth: ^3.1.1
-  shared_preferences: ^2.0.8
-  firebase_database: ^7.2.1
-  http: ^0.13.3
+  font_awesome_flutter: ^10.1.0
+  #firebase
+  firebase_core: ^1.14.0
+  firebase_auth: ^3.3.12
+  firebase_database: ^9.0.4
+  cloud_firestore: ^3.1.11
+  google_sign_in: ^5.2.4
+  #bloc
+  bloc: ^8.0.3
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
+  # web services
+  dio: ^4.0.6
+  http: ^0.13.3 # will be removed
+  #local data
+  shared_preferences: ^2.0.13
+
+  #widget
   curved_navigation_bar: ^1.0.1
   flutter_typeahead: ^3.2.1
   fluttertoast: ^8.0.8
   flutter_native_splash: ^1.2.4
-
-
 
 dev_dependencies:
   flutter_test:
