--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,14 @@ dependencies:
   # web services
   dio: ^4.0.6
   http: ^0.13.3 # will be removed
+  connectivity_plus: ^2.2.1
   #local data
   shared_preferences: ^2.0.13
   #widget
   curved_navigation_bar: ^1.0.1
   flutter_typeahead: ^3.2.4
   fluttertoast: ^8.0.8
+  pull_to_refresh: ^2.0.0
   flutter_native_splash: ^1.2.4
   onboarding: ^3.1.0
 
